# mc-server-stats-api

./: .gitignore  Cargo.toml
scripts/: get_deaths.py  get_stat.py
src/: cors.rs  main.rs  username_cache.rs
src/api/: api_response.rs  mod.rs
src/api/v1/: stats.rs
src/api/v2/: mod.rs  routes.rs
